Added Basic working adc functionality :tada:

--- a/ADCT0ATrigger_4C123/ADCT0ATrigger.build_log.htm
+++ b/ADCT0ATrigger_4C123/ADCT0ATrigger.build_log.htm
@@ -3,7 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-F:\Documents\2014Fall\445L_Embedded_Systems\LaunchPadware\ADCT0ATrigger_4C123\ADCT0ATrigger.uvproj
+F:\Documents\2016Spr\EE445Lab\ADCT0ATrigger_4C123\ADCT0ATrigger.uvproj
 Project File Date:  02/02/2016
 
 <h2>Output:</h2>
+</pre>
+</body>
+</html>
