--- a/Interpreter_Lab1/UARTInts.build_log.htm
+++ b/Interpreter_Lab1/UARTInts.build_log.htm
@@ -17,7 +17,10 @@ Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
 Verify OK.
-:\\Documents\\2016Spr\\EE445Lab\\Interpreter_Lab1\\UARTInts.axf" 
+</pre>
+</body>
+</html>
+45Lab\\Interpreter_Lab1\\UARTInts.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
