More Shell like interpreter :+1:
You can also run the prokect now hopefully

--- a/ReferenceLabs/ST7735_4C123/ST7735.build_log.htm
+++ b/ReferenceLabs/ST7735_4C123/ST7735.build_log.htm
@@ -3,7 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-F:\Documents\2016Spr\ST7735_4C123\ST7735.uvproj
+F:\Documents\2016Spr\EE445Lab\ReferenceLabs\ST7735_4C123\ST7735.uvproj
 Project File Date:  02/03/2016
 
 <h2>Output:</h2>
+</pre>
+</body>
+</html>
