--- a/Lab1/Interpreter_Lab1/UARTInts.build_log.htm
+++ b/Lab1/Interpreter_Lab1/UARTInts.build_log.htm
@@ -3,7 +3,25 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-F:\Documents\2016Spr\EE445Lab\Lab1\Interpreter_Lab1\Interpreter.uvproj
-Project File Date:  02/08/2016
+F:\Documents\Github\EE445Lab\Lab1\Interpreter_Lab1\Interpreter.uvproj
+Project File Date:  02/12/2016
 
 <h2>Output:</h2>
+Rebuild target 'UARTInts'
+assembling startup.s...
+compiling PLL.c...
+compiling UART.c...
+compiling ST7735.c...
+compiling SysTickInts.c...
+compiling InterpreterMain.c...
+compiling ADCT0ATrigger.c...
+linking...
+Program Size: Code=9276 RO-data=14988 RW-data=92 ZI-data=1356  
+".\UARTInts.axf" - 0 Error(s), 0 Warning(s).
+Load "F:\\Documents\\Github\\EE445Lab\\Lab1\\Interpreter_Lab1\\UARTInts.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Connection failed!, error code=&d
+Error: Flash Download failed  -  Target DLL has been cancelled
+</pre>
+</body>
+</html>
