--- a/Lab1/Interpreter_Lab1/UARTInts.htm
+++ b/Lab1/Interpreter_Lab1/UARTInts.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\UARTInts.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\UARTInts.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.02 [Build 28]: Last Updated: Tue Feb 09 18:16:21 2016
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Fri Feb 12 15:46:49 2016
 <BR><P>
 <H3>Maximum Stack Usage =        216 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -762,7 +762,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[8f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_printf_u
 </UL>
 
-<P><STRONG><a name="[9f]"></a>__printf</STRONG> (Thumb, 186 bytes, Stack size 24 bytes, __printf_ss.o(.text))
+<P><STRONG><a name="[9f]"></a>__printf</STRONG> (Thumb, 184 bytes, Stack size 24 bytes, __printf_ss.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 24 + Unknown Stack Size
 <LI>Call Chain = __printf
 </UL>
@@ -834,7 +834,7 @@ Global Symbols
 <P><STRONG><a name="[24]"></a>ADC0Seq3_Handler</STRONG> (Thumb, 74 bytes, Stack size 0 bytes, adct0atrigger.o(i.ADC0Seq3_Handler))
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
-<P><STRONG><a name="[a4]"></a>ADC0_InitTimer0ATriggerSeq3</STRONG> (Thumb, 1010 bytes, Stack size 16 bytes, adct0atrigger.o(i.ADC0_InitTimer0ATriggerSeq3))
+<P><STRONG><a name="[a4]"></a>ADC0_InitTimer0ATriggerSeq3</STRONG> (Thumb, 1018 bytes, Stack size 16 bytes, adct0atrigger.o(i.ADC0_InitTimer0ATriggerSeq3))
 <BR><BR>[Stack]<UL><LI>Max Depth = 16 + Unknown Stack Size
 <LI>Call Chain = ADC0_InitTimer0ATriggerSeq3
 </UL>
@@ -867,13 +867,17 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[d8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;print_adc
 </UL>
 
-<P><STRONG><a name="[cd]"></a>Delay1ms</STRONG> (Thumb, 22 bytes, Stack size 0 bytes, st7735.o(i.Delay1ms))
-<BR><BR>[Called By]<UL><LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;commonInit
+<P><STRONG><a name="[cd]"></a>Delay1ms</STRONG> (Thumb, 32 bytes, Stack size 8 bytes, st7735.o(i.Delay1ms))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = Delay1ms
+</UL>
+<BR>[Called By]<UL><LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;commonInit
 <LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;commandList
 </UL>
 
-<P><STRONG><a name="[d3]"></a>DelayWait10ms</STRONG> (Thumb, 22 bytes, Stack size 0 bytes, interpretermain.o(i.DelayWait10ms))
-<BR><BR>[Called By]<UL><LI><a href="#[d1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;full_test
+<P><STRONG><a name="[d3]"></a>DelayWait10ms</STRONG> (Thumb, 32 bytes, Stack size 8 bytes, interpretermain.o(i.DelayWait10ms))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = DelayWait10ms
+</UL>
+<BR>[Called By]<UL><LI><a href="#[d1]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;full_test
 </UL>
 
 <P><STRONG><a name="[a9]"></a>OS_AddPeriodicThread</STRONG> (Thumb, 40 bytes, Stack size 16 bytes, interpretermain.o(i.OS_AddPeriodicThread))
@@ -1258,7 +1262,7 @@ Local Symbols
 </UL>
 
 <P><STRONG><a name="[bd]"></a>commandList</STRONG> (Thumb, 86 bytes, Stack size 24 bytes, st7735.o(i.commandList))
-<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = commandList
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = commandList &rArr; Delay1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[cd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Delay1ms
 <LI><a href="#[b5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;writedata
@@ -1269,7 +1273,7 @@ Local Symbols
 </UL>
 
 <P><STRONG><a name="[bc]"></a>commonInit</STRONG> (Thumb, 340 bytes, Stack size 8 bytes, st7735.o(i.commonInit))
-<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = commonInit &rArr; commandList
+<BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = commonInit &rArr; commandList &rArr; Delay1ms
 </UL>
 <BR>[Calls]<UL><LI><a href="#[cd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Delay1ms
 <LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;commandList
