--- a/RTOS_4C123/RTOS.build_log.htm
+++ b/RTOS_4C123/RTOS.build_log.htm
@@ -7,3 +7,64 @@ F:\Documents\Github\EE445Lab\RTOS_4C123\RTOS.uvproj
 Project File Date:  02/16/2016
 
 <h2>Output:</h2>
+Build target 'RTOS'
+assembling osasm.s...
+linking...
+Program Size: Code=3056 RO-data=32 RW-data=76 ZI-data=3164  
+".\RTOS.axf" - 0 Error(s), 0 Warning(s).
+</pre>
+</body>
+</html>
+nit" declared implicitly
+                SysTick_Init(OS_ISR_period, 
+os.h(184): warning:  #177-D: variable "new_next" was declared but never referenced
+                tcbType new_next = *(RunPt->next);  // this could be problematic
+os.h(182): warning:  #177-D: variable "new_next" was declared but never referenced
+        tcbType new_next;
+os.h(236): warning:  #550-D: variable "prev" was set but never used
+        tcbType prev;  // search for what points to me
+Lab2.c(87): warning:  #9-D: nested comment is not allowed
+  //******** DAS *************** 
+Lab2.c(145): warning:  #9-D: nested comment is not allowed
+  //************SW1Push*************
+Lab2.c(157): warning:  #9-D: nested comment is not allowed
+  //************SW2Push*************
+Lab2.c(179): warning:  #9-D: nested comment is not allowed
+  //******** Producer *************** 
+Lab2.c(198): warning:  #9-D: nested comment is not allowed
+  //******** Consumer *************** 
+Lab2.c(222): warning:  #9-D: nested comment is not allowed
+  //******** Display *************** 
+Lab2.c(245): warning:  #9-D: nested comment is not allowed
+  //******** PID *************** 
+Lab2.c(296): warning:  #9-D: nested comment is not allowed
+  //*******************final user main DEMONTRATE THIS TO TA**********
+Lab2.c(304): warning:  #9-D: nested comment is not allowed
+  //********initialize communication channels
+Lab2.c(308): warning:  #9-D: nested comment is not allowed
+  //*******attach background tasks***********
+Lab2.c(421): warning:  #9-D: nested comment is not allowed
+  //*******************Third TEST**********
+Lab2.c(485): warning:  #9-D: nested comment is not allowed
+  //*******************Third TEST**********
+Lab2.c(493): warning:  #9-D: nested comment is not allowed
+  //*******************Fourth TEST**********
+Lab2.c(554): warning:  #9-D: nested comment is not allowed
+  //******************* Lab 3 Preparation 2**********
+Lab2.c(568): warning:  #9-D: nested comment is not allowed
+  //*******PseudoWork*************
+Lab2.c(622): warning:  #9-D: nested comment is not allowed
+  //******************* Lab 3 Preparation 4**********
+Lab2.c(722): warning:  #9-D: nested comment is not allowed
+  //******************* Lab 3 Measurement of context switch time**********
+Lab2.c: 22 warnings, 0 errors
+linking...
+Program Size: Code=3056 RO-data=32 RW-data=76 ZI-data=3164  
+".\RTOS.axf" - 0 Error(s), 22 Warning(s).
+ Size: Code=2640 RO-data=32 RW-data=76 ZI-data=3164  
+".\RTOS.axf" - 0 Error(s), 22 Warning(s).
+ror: L6218E: Undefined symbol Start_OS (referred from lab2.o).
+Not enough information to list image symbols.
+Finished: 1 information, 0 warning and 1 error messages.
+".\RTOS.axf" - 1 Error(s), 23 Warning(s).
+Target not created
