--- a/RTOS_4C123/RTOS.htm
+++ b/RTOS_4C123/RTOS.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\RTOS.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\RTOS.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Feb 21 10:55:52 2016
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5.03 [Build 76]: Last Updated: Sun Feb 21 11:02:04 2016
 <BR><P>
 <H3>Maximum Stack Usage =         96 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -63,7 +63,7 @@ Function Pointers
  <LI><a href="#[60]">FPU_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
  <LI><a href="#[68]">Fan0_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
  <LI><a href="#[2b]">FlashCtl_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
- <LI><a href="#[e]">GPIOPortA_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
+ <LI><a href="#[e]">GPIOPortA_Handler</a> from switch.o(i.GPIOPortA_Handler) referenced from startup.o(RESET)
  <LI><a href="#[f]">GPIOPortB_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
  <LI><a href="#[10]">GPIOPortC_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
  <LI><a href="#[11]">GPIOPortD_Handler</a> from startup.o(RESET) referenced from startup.o(RESET)
@@ -294,9 +294,6 @@ Global Symbols
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
 <P><STRONG><a name="[2b]"></a>FlashCtl_Handler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup.o(RESET))
-<BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
-</UL>
-<P><STRONG><a name="[e]"></a>GPIOPortA_Handler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup.o(RESET))
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
 <P><STRONG><a name="[f]"></a>GPIOPortB_Handler</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, startup.o(RESET))
@@ -788,6 +785,11 @@ Global Symbols
 <P><STRONG><a name="[da]"></a>__user_perthread_libspace</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, libspace.o(.text), UNUSED)
 
 <P><STRONG><a name="[1f]"></a>ADC0Seq3_Handler</STRONG> (Thumb, 74 bytes, Stack size 0 bytes, adct0atrigger.o(i.ADC0Seq3_Handler))
+<BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
+</UL>
+<P><STRONG><a name="[e]"></a>GPIOPortA_Handler</STRONG> (Thumb, 10 bytes, Stack size 8 bytes, switch.o(i.GPIOPortA_Handler))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = GPIOPortA_Handler
+</UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
 <P><STRONG><a name="[9b]"></a>OS_AddThread</STRONG> (Thumb, 250 bytes, Stack size 48 bytes, lab2.o(i.OS_AddThread))
