--- a/ReferenceLabs/ADCT0ATrigger_4C123/ADCT0ATrigger.build_log.htm
+++ b/ReferenceLabs/ADCT0ATrigger_4C123/ADCT0ATrigger.build_log.htm
@@ -3,10 +3,22 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-F:\Documents\2016Spr\EE445Lab\ADCT0ATrigger_4C123\ADCT0ATrigger.uvproj
-Project File Date:  02/02/2016
+F:\Documents\Github\EE445Lab\ReferenceLabs\ADCT0ATrigger_4C123\ADCT0ATrigger.uvproj
+Project File Date:  02/21/2016
 
 <h2>Output:</h2>
+Rebuild target 'ADCT0ATrigger'
+assembling startup.s...
+compiling ADCT0ATrigger.c...
+compiling ADCTestmain.c...
+compiling PLL.c...
+linking...
+Program Size: Code=2132 RO-data=32 RW-data=4 ZI-data=1028  
+".\ADCT0ATrigger.axf" - 0 Error(s), 0 Warning(s).
 </pre>
 </body>
 </html>
+1 error
+compiling PLL.c...
+".\ADCT0ATrigger.axf" - 1 Error(s), 0 Warning(s).
+Target not created
