--- a/RTOS_4C123/RTOS.build_log.htm
+++ b/RTOS_4C123/RTOS.build_log.htm
@@ -3,89 +3,10 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\Liz\Desktop\EE445Lab\RTOS_4C123\RTOS.uvproj
-Project File Date:  02/16/2016
+F:\Documents\Github\EE445Lab\RTOS_4C123\RTOS.uvproj
+Project File Date:  02/21/2016
 
 <h2>Output:</h2>
-Build target 'RTOS'
-compiling Lab2.c...
-os.h(209): warning:  #223-D: function "SysTick_Init" declared implicitly
-        SysTick_Init(OS_ISR_period, 
-os.h(211): warning:  #513-D: a value of type "void (*)(void (*)(void), uint32_t, uint16_t)" cannot be assigned to an entity of type "int (*)(void (*)(void), unsigned long, uint16_t)"
-        timer_init_fns[0] = Timer0A_Init;
-os.h(212): warning:  #513-D: a value of type "void (*)(void (*)(void), uint32_t, uint16_t)" cannot be assigned to an entity of type "int (*)(void (*)(void), unsigned long, uint16_t)"
-        timer_init_fns[1] = Timer1A_Init;
-os.h(213): warning:  #513-D: a value of type "void (*)(void (*)(void), unsigned long, uint16_t)" cannot be assigned to an entity of type "int (*)(void (*)(void), unsigned long, uint16_t)"
-        timer_init_fns[2] = Timer2A_Init;
-os.h(214): warning:  #513-D: a value of type "void (*)(void (*)(void), unsigned long, uint16_t)" cannot be assigned to an entity of type "int (*)(void (*)(void), unsigned long, uint16_t)"
-        timer_init_fns[3] = Timer3A_Init;
-os.h(227): warning:  #177-D: variable "new_next" was declared but never referenced
-                tcbType new_next = *(RunPt->next);  // this could be problematic
-os.h(225): warning:  #177-D: variable "new_next" was declared but never referenced
-        tcbType new_next;
-os.h(281): warning:  #550-D: variable "prev" was set but never used
-        tcbType prev;  // search for what points to me
-os.h(324): warning:  #940-D: missing return statement at end of non-void function "OS_AddSW1Task"
-  }
-os.h(341): warning:  #940-D: missing return statement at end of non-void function "OS_AddSW2Task"
-  }
-os.h(368): warning:  #940-D: missing return statement at end of non-void function "OS_Fifo_Put"
-  }     
-os.h(383): warning:  #940-D: missing return statement at end of non-void function "OS_Fifo_Get"
-  }
-os.h(425): warning:  #940-D: missing return statement at end of non-void function "OS_MailBox_Recv"
-  }
-UART.h(111): warning:  #1-D: last line of file ends without a newline
-  void UART_InString(char *bufPt, uint16_t max);
-ST7735TestResources.h(589): warning:  #1-D: last line of file ends without a newline
-  }
-Interpreter.h(163): error:  #165: too few arguments in function call
-                                ST7735_Message(1, 1, &input_string[5]);
-Lab2.c(133): warning:  #223-D: function "OS_Id" declared implicitly
-  unsigned long myId = OS_Id(); 
-Lab2.c(206): warning:  #223-D: function "OS_Id" declared implicitly
-  unsigned long myId = OS_Id(); 
-Lab2.c(207): error:  #167: argument of type "void (*)(unsigned long)" is incompatible with parameter of type "unsigned short *"
-    ADC_Collect(5, FS, &Producer); // start ADC sampling, channel 5, PD2, 400 Hz
-Lab2.c(207): error:  #165: too few arguments in function call
-    ADC_Collect(5, FS, &Producer); // start ADC sampling, channel 5, PD2, 400 Hz
-Lab2.c(255): warning:  #223-D: function "OS_Id" declared implicitly
-  unsigned long myId = OS_Id(); 
-Lab2.c(310): warning:  #223-D: function "ADC_Init" declared implicitly
-    ADC_Init(4);  // sequencer 3, channel 4, PD3, sampling in DAS()
-Lab2.c(553): warning:  #9-D: nested comment is not allowed
-  //******************* Lab 3 Preparation 2**********
-Lab2.c(567): warning:  #9-D: nested comment is not allowed
-  //*******PseudoWork*************
-Lab2.c(621): warning:  #9-D: nested comment is not allowed
-  //******************* Lab 3 Preparation 4**********
-Lab2.c: 22 warnings, 3 errors
-compiling ST7735.c...
-".\RTOS.axf" - 3 Error(s), 22 Warning(s).
-Target not created
-ted comment is not allowed
-  //******************* Lab 3 Preparation 4**********
-Lab2.c: 22 warnings, 4 errors
-".\RTOS.axf" - 4 Error(s), 22 Warning(s).
-Target not created
-.c(621): warning:  #9-D: nested comment is not allowed
-  //******************* Lab 3 Preparation 4**********
-Lab2.c: 22 warnings, 5 errors
-".\RTOS.axf" - 5 Error(s), 22 Warning(s).
-Target not created
-ed from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol PID_stm32 (referred from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol ST7735_Message (referred from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol cr4_fft_64_stm32 (referred from lab2.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 14 error messages.
-".\RTOS.axf" - 14 Error(s), 22 Warning(s).
-Target not created
-(referred from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol PID_stm32 (referred from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol ST7735_Message (referred from lab2.o).
-.\RTOS.axf: Error: L6218E: Undefined symbol cr4_fft_64_stm32 (referred from lab2.o).
-Not enough information to list image symbols.
-Finished: 1 information, 0 warning and 20 error messages.
-".\RTOS.axf" - 20 Error(s), 20 Warning(s).
-Target not created
+</pre>
+</body>
+</html>
