After adding interpreter we're in debug :hamster:

--- a/RTOS_4C123/RTOS.build_log.htm
+++ b/RTOS_4C123/RTOS.build_log.htm
@@ -4,9 +4,40 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 F:\Documents\Github\EE445Lab\RTOS_4C123\RTOS.uvproj
-Project File Date:  02/21/2016
+Project File Date:  02/23/2016
 
 <h2>Output:</h2>
+Rebuild target 'RTOS'
+assembling startup.s...
+assembling osasm.s...
+compiling PLL.c...
+compiling Lab2.c...
+Timers.h(127): warning:  #1-D: last line of file ends without a newline
+  }
+os.h(236): warning:  #177-D: variable "new_next" was declared but never referenced
+                tcbType new_next = *(RunPt->next);  // this could be problematic
+os.h(234): warning:  #177-D: variable "new_next" was declared but never referenced
+        tcbType new_next;
+os.h(290): warning:  #550-D: variable "prev" was set but never used
+        tcbType prev;  // search for what points to me
+Lab2.c: 4 warnings, 0 errors
+compiling SysTickInts.c...
+compiling ADCT0ATrigger.c...
+compiling Switch.c...
+compiling ST7735.c...
+compiling UART.c...
+FIFO.h(115): warning:  #1-D: last line of file ends without a newline
+  #endif //  __FIFO_H__
+UART.c(315): warning:  #1-D: last line of file ends without a newline
+  }
+UART.c: 2 warnings, 0 errors
+assembling cr4_fft_64_stm32.s...
+assembling cr4_fft_256_stm32.s...
+assembling cr4_fft_1024_stm32.s...
+assembling PID_stm32.s...
+linking...
+Program Size: Code=4784 RO-data=32 RW-data=216 ZI-data=3968  
+".\RTOS.axf" - 0 Error(s), 6 Warning(s).
 </pre>
 </body>
 </html>
