--- a/RTOS_4C123/RTOS.build_log.htm
+++ b/RTOS_4C123/RTOS.build_log.htm
@@ -4,23 +4,13 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 F:\Documents\Github\EE445Lab\RTOS_4C123\RTOS.uvproj
-Project File Date:  02/23/2016
+Project File Date:  02/24/2016
 
 <h2>Output:</h2>
-Rebuild target 'RTOS'
-assembling startup.s...
-assembling osasm.s...
-compiling PLL.c...
-compiling Lab2.c...
-compiling SysTickInts.c...
-compiling ADCT0ATrigger.c...
-compiling Switch.c...
-compiling ST7735.c...
-compiling UART.c...
-assembling cr4_fft_64_stm32.s...
-assembling cr4_fft_256_stm32.s...
-assembling cr4_fft_1024_stm32.s...
-assembling PID_stm32.s...
-linking...
-Program Size: Code=4456 RO-data=32 RW-data=204 ZI-data=3972  
-".\RTOS.axf" - 0 Error(s), 0 Warning(s).
+Load "F:\\Documents\\Github\\EE445Lab\\RTOS_4C123\\RTOS.axf" 
+Connecting: Mode=JTAG, Speed=1000000Hz
+Connection failed!, error code=&d
+Error: Flash Download failed  -  Target DLL has been cancelled
+</pre>
+</body>
+</html>
